# Voutil

./: .gitignore  CODE_OF_CONDUCT.md  COMMIT_MSG  Cargo.toml  LICENSE  PKGBUILD  README.md  build.rs  create_release.sh
.cargo/: config.toml
benches/: my_benchmark.rs
res/: info.plist  pkgbuild  voutil.desktop
src/: appstate.rs  cache.rs  file_encoder.rs  filebrowser.rs  image_editing.rs  image_loader.rs  lib.rs  mac.rs  main.rs  settings.rs  shortcuts.rs  utils.rs
src/ui/: __mod.rs  __palette_ui.rs  __settings_ui.rs  appwindow.slint  color_correction_window.slint  edit_ui.rs  main.slint  mod.rs  palette_ui.rs  resize_window.slint  settings_ui.rs  settings_window.slint  theme.rs  theme.slint  thumbnail_window.slint  top_bar.rs
