[package]
name = "oculante"
version = "0.9.2"
description = "A minimalistic image viewer with analysis and editing tools"
repository = "https://github.com/woelper/oculante/"
authors = ["Johann Woelper <woelper@gmail.com>"]
license = "MIT"
readme = "README.md"
edition = "2021"
build = "build.rs"

[package.metadata.bundle]
name = "Oculante"
identifier = "com.github.woelper.oculante"
icon = ["res/icons/icon.png"]
resources = ["LICENSE"]
short_description = "A lightweight and minimalistic image viewer"
copyright = "Copyright (c) 2024 The Oculante Contributors"

[profile.dev.package."*"]
opt-level = 1
[profile.dev.build-override]
opt-level = 1
[profile.release]
lto = "thin"

[features]
default = []
networking = []
avif = []
benchmark = []



[dependencies]
slint = "1.3" # Slint UI library
image = "0.25" # Image processing library
rfd = "0.14"

# Temporarily comment out Bevy, Egui, and Notan related dependencies
# Bevy
# bevy = { version = "0.15", default-features = false, features = ["bevy_asset", "bevy_winit", "bevy_core_pipeline", "bevy_render", "bevy_pbr", "bevy_sprite", "png", "jpeg", "hdr"] }
# bevy_egui = "0.33"
# egui_plot = "0.33"
# egui_extras = { version = "0.33", features = ["image", "file"] }

# Notan
# notan = { version = "0.13", default-features = false, features = [
#     "backend",
#     "draw",
#     "drop_files",
#     "egui",
#     "clipboard",
# ] }
# egui_plot = "0.31" # For Notan's egui
# egui-notify = "0.19" # For Notan's egui
# egui_extras = { version = "0.31", features = ["image", "file"] } # For Notan's egui

lazy_static = "1.4.0"
directories-next = "2.0.0"
open = "5"
sys-info = "0.9.0"
backtrace = "0.3.56"
serde = { version = "1.0.123", features = ["derive"] }
toml = "0.8.12"
rand = "0.8.3"
lexical-sort = "0.3.1"
trash = "4.1"
clap = { version = "4.0.15" }
kamadak-exif = "0.5.3"
arboard = { version = "3.3", features = ["wayland-data-control"] }
resvg = "0.41"
usvg = "0.41"
tiny-skia = "0.11.4"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0.59"

img-parts = "0.3"
dark-light = "2.0"
flate2 = "1.0"
bitflags = "2.8"
wgpu = "22"
ruzstd = "0.8"
mouse_position = "0.1.4"
file-format = "0.26"
zip = "2.2"
unicode-segmentation = "1.12.0"
font-kit = "0.14"

# Image formats
avif-decode = { version = "1.0", optional = true }
turbojpeg = { version = "1.2", optional = true }
psd = "0.3"
quickraw = "0.1.6"
tiff = "0.9"
jxl-oxide = "0.8"
zune-png = "0.5.0-rc1"
libheif-rs = { version = "2", default-features = false, features = ["v1_19"], optional = true }
ktx2 = "0.3.0"
basis-universal = "0.3"
dds-rs = "0.7"
exr = "1.73"
gif = "0.13.1"
jpeg2k = { version = "0.9", optional = true, default-features = false, features = ["threads", "file-io", "openjpeg-sys"] }
icns = "0.3.1"
webp-animation = { version = "0.9.0", features = ["static"] }
dicom-pixeldata = { version = "0.8", features = ["image"] }
dicom-object = "0.8"
libavif-image = { version = "0.14", optional = true }
gif-dispose = "5.0.1"

# Filter crates
palette = "0.7"
lutgen = { version = "0.11", features = ["lutgen-palettes"] }
quantette = { version = "0.3.0", features = ["threads"] }
ase-swatch = "0.1.0"
libblur = "0.14"
imageproc = { version = "0.25", features = ["rayon"] }
evalexpr = "12"
fast_image_resize = { version = "5.1", features = ["rayon"] }

# APP FUNCTIONALITY CRATES (already in main section, consolidated)

[target.'cfg(target_os = "macos")'.dependencies]
fruitbasket = "0.10.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[build-dependencies]
slint-build = "1.3"

[dev-dependencies]
cmd_lib = "1.3.0"
xmltree = "0.11.0"
chrono = "0.4.38"
criterion = { version = "0.5.1", features = ["html_reports", "stable"] }